@@ -4,6 +4,10 @@
 
 	* Attempting to fix bug 2922415 involving zero byte files
 
+	* Added a few items to the TODO list
+
+	* Started web page cleanup
+
 
 2009-12-21 Jesse Kornblum
 
